--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
        <section id="profile-card">
            <div class="profiler">
-               <img src="/assets/images/index.jpeg">
+               <img src="index.jpeg">
                <h1>Mushraf Parwej</h1>
                <h3>Student at C.V Raman Global University</h3>
                <h3>Computer Science and Engineering</h3>
